--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_url: https://NPU-Home.github.io/arm # 网站地址
 # site_description: 机械臂文档 # 网站描述
 site_author: GaoZQi # 网站作者
 
-repo_name: NPU-Home/arm-docs # 仓库名称
+repo_name: NPU-Home/arm-doc # 仓库名称
 repo_url: https://github.com/NPU-Home/arm-doc # 仓库地址
 
 theme:
