--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,20 +63,31 @@ extra_javascript:
 
 plugins:
     - search: {}
-    - encryptcontent:
-        # global_password: 'your_password'
-      # password_file: "passwords.yml"
-        password_button: True
-        password_button_text: 'custom_text_button'
-        encrypted_something:
-          mkdocs-encrypted-toc: [div, id]
+    # - encryptcontent:
+    #     password_file: 'passwords.yml'
+
+    #     password_button: True
+    #     password_button_text: "custom_text_button"
+
+    #     title_prefix: ""
+    #     summary: "如需访问该网站内容，请输入口令。"
+    #     placeholder: "口令"
+    #     decryption_failure_message: "错误！"
+    #     encryption_info_message: " "
+    #   # input_class: 'md-enctypt__input'
+    #   # button_class: 'md-enctypt__button'
+
+    #     reload_scripts:
+    #       - 'docs/js/zoom.js'
+    #       - 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js'
+
     - git-revision-date-localized:
-          type: timeago
-          custom_format: "%d. %B %Y"
-          timezone: Asia/Shanghai
-          locale: zh
-          fallback_to_build_date: false
-          enable_creation_date: true
+        type: timeago
+        custom_format: "%d. %B %Y"
+        timezone: Asia/Shanghai
+        locale: zh
+        fallback_to_build_date: false
+        enable_creation_date: true
     # - mkdocs-code-runner
     # - git-revision-date-localized:
     #     type: iso_datetime
@@ -133,11 +144,11 @@ markdown_extensions:
     - pymdownx.emoji: # emoji
           emoji_index:
               !!python/name:material.extensions.emoji.twemoji # emoji索引
-
           emoji_generator: !!python/name:material.extensions.emoji.to_svg
               # emoji生成器
 
               # 导航栏
+
 
 nav:
     # - index.md
