--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ extra_css:
     # - css/custom.css
     - css/theme/card.css
     - css/theme/button.css
+    - css/theme/ico.css
 
     - css/img-zoom/zoom.css
 
