chore: 调整按钮和链接样式
调整了按钮和链接的样式，包括宽度、背景颜色、边框和阴影等。更新了按钮和输入框的最大宽度，以及输入框的背景和阴影效果。修复了一个脚本引入的问题。

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,8 +88,12 @@ plugins:
         encryption_info_message: "此内容为涉及核心代码，非基地内成员禁止访问！如需访问该网站内容，请输入正确口令。"
 
         encrypted_something:
-            md-footer__inner: [nav, class]
-            md-nav: [nav, class]
+            # md-footer__inner: [nav, class]
+            md-nav md-nav--secondary: [nav, class]
+            # md-nav__list: [ul, class]
+            # md-nav__title: [lable, class]
+            # md-nav: [nav, class]
+            # md-sidebar__inner: [div, class]
 
 
     - git-revision-date-localized:
