chore: 调整按钮和链接样式
调整按钮和链接样式，更新了CSS样式文件中的代码。修复了表单在鼠标悬停和获取焦点时边框的显示问题，并添加了过渡效果。修复了导航栏中的问题反馈链接，更新了相关文档的URL地址。

Fixes #issue-number

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -167,7 +167,5 @@ nav:
     - 历史文档:
         - page/history/index.md
         - 问题反馈:
-            - GitHub: https://NPU-Home.github.io/arm
-        - 2017年:
-            - 开发记录: page/history/#2017
+            - GitHub: https://github.com/NPU-Home/arm/discussions/9
     - 其他文档: https://npu-home.github.io/home/page/%E6%96%87%E6%A1%A3/
