--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,68 +33,39 @@ theme:
     custom_dir: docs/resources
 
 extra_css:
-    - css/theme/global/fonts.css
-    - css/theme/global/scheme.css
-    - css/theme/global/img.css
-
-    - css/theme/content/admonition.css
-    - css/theme/content/markdown.css
-
-    - css/theme/head/search.css
-    - css/theme/head/git.css
-    - css/theme/head/tab.css
-    - css/theme/head/header.css
-
-    - css/theme/foot/footer.css
-    - css/theme/nav.css
-    - css/theme/top.css
-    - css/theme/link.css
-    # - css/custom.css
-    - css/theme/card.css
-    - css/theme/button.css
-    - css/theme/ico.css
-
-    - css/img-zoom/zoom.css
-
-    - css/enc/input.css
-    - css/enc/button.css
-    - css/enc/msg.css
-    - css/enc/block.css
-
-    - css/giscus/giscus.css
+    - material-mkdocs-theme/css/import.css
 
 extra_javascript:
     # - https://polyfill.io/v3/polyfill.min.js?features=es6
     - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
-    - js/zoom.js
+    - material-mkdocs-theme/js/zoom.js
 
 plugins:
     - heti
     - search: {}
     - encryptcontent:
-        password_file: 'passwords.yml'
+          password_file: "passwords.yml"
 
-        reload_scripts:
-          - 'js/zoom.js'
-          - 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js'
+          reload_scripts:
+              - "js/zoom.js"
+              - "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
 
-        password_button: True
-        password_button_text: "→"
+          password_button: True
+          password_button_text: "→"
 
-        title_prefix: ""
-        summary: "限制访问！"
-        placeholder: "请输入口令"
-        decryption_failure_message: "⚠ 错误！"
-        encryption_info_message: "此内容为涉及核心代码，非基地内成员禁止访问！如需访问该网站内容，请输入正确口令。"
+          title_prefix: ""
+          summary: "限制访问！"
+          placeholder: "请输入口令"
+          decryption_failure_message: "⚠ 错误！"
+          encryption_info_message: "此内容为涉及核心代码，非基地内成员禁止访问！如需访问该网站内容，请输入正确口令。"
 
-        encrypted_something:
-            # md-footer__inner: [nav, class]
-            md-nav md-nav--secondary: [nav, class]
-            # md-nav__list: [ul, class]
-            # md-nav__title: [lable, class]
-            # md-nav: [nav, class]
-            # md-sidebar__inner: [div, class]
-
+          encrypted_something:
+              # md-footer__inner: [nav, class]
+              md-nav md-nav--secondary: [nav, class]
+              # md-nav__list: [ul, class]
+              # md-nav__title: [lable, class]
+              # md-nav: [nav, class]
+              # md-sidebar__inner: [div, class]
 
     - git-revision-date-localized:
         type: timeago
@@ -126,10 +97,8 @@ markdown_extensions:
 
     - pymdownx.keys # 键盘
     - pymdownx.mark # 标记
-      # 格式化处理
     - pymdownx.caret # 上标
     - pymdownx.keys # 键盘
-    - pymdownx.mark # 标记
     - pymdownx.tilde # 删除线
     - pymdownx.critic # 评论
 
@@ -149,8 +118,10 @@ markdown_extensions:
     - pymdownx.emoji: # emoji
           emoji_index:
               !!python/name:material.extensions.emoji.twemoji # emoji索引
-          emoji_generator: !!python/name:material.extensions.emoji.to_svg
-              # emoji生成器
+
+          emoji_generator:
+              !!python/name:material.extensions.emoji.to_svg # emoji生成器
+
 
 nav:
     - 首页: index.md
@@ -165,7 +136,7 @@ nav:
           - page/tutorial/index.md
           - 配置URDF: page/tutorial/MoveIt!/配置URDF.md
     - 历史文档:
-        - page/history/index.md
-        - 问题反馈:
-            - GitHub: https://github.com/NPU-Home/arm/discussions/9
+          - page/history/index.md
+          - 问题反馈:
+                - GitHub: https://github.com/NPU-Home/arm/discussions/9
     - 其他文档: https://npu-home.github.io/home/page/%E6%96%87%E6%A1%A3/
