--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,7 @@ plugins:
               - "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
 
           password_button: True
-          password_button_text: "→"
+          password_button_text: "➜"
 
           title_prefix: ""
           summary: "限制访问！"
